--- a/src/main/asciidoc/releasenotes/1.10.0.adoc
+++ b/src/main/asciidoc/releasenotes/1.10.0.adoc
@@ -4,4 +4,4 @@
 ifndef::jqa-in-manual[== Version 1.10.0]
 ifdef::jqa-in-manual[== Neo4j Backend Version 1.10.0]
 
-* No changes in this version.
+- Upgraded to Neo4j 3.5.28
