--- a/readme.adoc
+++ b/readme.adoc
@@ -1,7 +1,7 @@
 = jQAssistant Server Extension (Prototype)
 
-This is a prototype of an jQAssistant Server Extension of https://www.jqassistant.org[jQAssistant^].
+This is a prototype of an jQAssistant Server Extension of https://jqassistant.org[jQAssistant^].
 
 WARNING: It is currently unly a prototype and not supported by the jQAssistant team.
 
-For more information on jQAssistant see https://www.jqassistant.org[^].
+For more information on jQAssistant see https://jqassistant.org[^].
