--- a/src/main/asciidoc/release-notes.adoc
+++ b/src/main/asciidoc/release-notes.adoc
@@ -1,6 +1,9 @@
 
 = Neo4j Backend
 
+== 2.0.1
+* Upgraded to Neo4j 4.4.20
+
 == 2.0.0
 * Upgraded to Neo4j 4.4.19 and Neo4j Browser 5.6.0
 * Added support for connecting to remote Neo4j 5.x instances
